discussion/kv_engine/147739/147739_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44168: WIP

Change-Id: Iba04a2fe4656ebdf0e9b52515bf986591286dd07

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-03-05 15:17:19.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-05 15:31:14.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7471/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4237:43: error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL" [clang-diagnostic-error]
            COUCHSTORE_OPEN_FLAG_CREATE | COUCHSTORE_OPEN_FLAG_EXCL,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7471/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4237:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7471/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34066/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(4237): error C2065: "COUCHSTORE_OPEN_FLAG_EXCL": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34066/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29263/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4237:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29263/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16987/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8143/ : FAILURE

Compile error at [2021-03-05T15:21:15.794Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4237:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8143/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9085/ : FAILURE

Compile error at [2021-03-05T15:28:43.578Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4237:43:
error: ?COUCHSTORE_OPEN_FLAG_EXCL? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9085/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9226/ : FAILURE

Compile error at [2021-03-05T15:30:16.381Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4237:43:
error: ?COUCHSTORE_OPEN_FLAG_EXCL? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9226/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9440/ : FAILURE

Compile error at [2021-03-05T15:29:22.067Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4237:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9440/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6009/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
